# assistantdefrancais

./: .env.default  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  justfile  prometheus.yml  pyproject.toml
.github/workflows/: deafult.yml  deploy.yml  tests.yml
assistant/: bot.py  config.py  llm.py  telemetry.py
grafana/dashboards/: discord_bot_dashboard.json
grafana/provisioning/datasources/: datasource.yml
src/: bot.py  config.py
src/assistantdefrancais/: __init__.py  bot.py  config.py  llm.py  telemetry.py
tests/: conftest.py  test_bot.py  test_llm.py
