[project]
name = "assistantdefrancais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.7",
]


[tool.pytest.ini_options]
testpaths="tests"
asyncio_default_fixture_loop_scope="session"
filterwarnings = [
    "ignore:'audioop' is deprecated"
]
